[gd_scene load_steps=6 format=3 uid="uid://3l4c3ub6a5ss"]

[ext_resource type="Script" path="res://actors/RollingBoulder.gd" id="1_boulder"]
[ext_resource type="Script" path="res://systems/DimensionNode.gd" id="2_dimension"]
[ext_resource type="Script" path="res://systems/DebugBorder.gd" id="3_debug"]

[sub_resource type="CircleShape2D" id="CircleShape2D_boulder"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_damage"]
radius = 28.0

[node name="RollingBoulder" type="RigidBody2D"]
script = ExtResource("1_boulder")
gravity_scale = 2.0

[node name="DebugBorder" type="Node2D" parent="."]
script = ExtResource("3_debug")
border_color = Color(0.6, 0.6, 0.6, 1)

[node name="DimensionNode" type="Node" parent="."]
script = ExtResource("2_dimension")
active_layers = Array[int]([0])

[node name="BoulderSprite" type="ColorRect" parent="."]
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
color = Color(0.6, 0.6, 0.6, 1)
modulate = Color(0.5, 0.4, 0.3, 1)
scale = Vector2(48, 48)

[node name="CollisionShape2D" type="CollisionShape2D"]
shape = SubResource("CircleShape2D_boulder")

[node name="DamageArea" type="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_damage")

[node name="DustParticles" type="CPUParticles2D"]
emitting = false
amount = 15
lifetime = 1.0
texture_filter = 1
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2(0, 1)
spread = 45.0
initial_velocity_min = 30.0
initial_velocity_max = 80.0
gravity = Vector2(0, 98)
color = Color(0.7, 0.6, 0.4, 1)

[node name="AnimationPlayer" type="AnimationPlayer"]